Fix horizontal scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-html, body {
-    height: 100vh;
-    width: 100vw;
-}
-
 .footer-default {
     margin-top: 30px;
 }
